--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
